syntax = "proto3";

package orderclient;

option go_package = "order";

message CreateRequest {
  int64 Uid = 1;
  int64 Pid = 2;
  int64 Amount = 3;
  int64 Status = 4;
}

message CreateResponse {
  int64 id = 1;
}

service Order {
  rpc Create(CreateRequest)  returns (CreateResponse);
  rpc CreateRevert(CreateRequest)  returns (CreateResponse);
}